<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <include android:id="@id/header" layout="@layout/header" />
        <View android:background="@color/about_grey_text" android:layout_width="fill_parent" android:layout_height="1.0dip" android:alpha="0.1" />
        <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/about_section_seperator" android:src="@drawable/about_droid_girl_highfive" />
        <com.google.android.apps.androidify.TextViewCompat android:textSize="@dimen/about_font_size" android:textColor="@color/about_grey_text" android:gravity="center" android:layout_gravity="center" android:layout_width="@dimen/about_button_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/about_internal_seperator" android:text="@string/about_body1" />
        <com.google.android.apps.androidify.AspectPreservingScaleableImageView android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/about_internal_seperator" android:src="@drawable/btn_about_video" android:onClick="clickedAboutVideo" />
        <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/about_section_seperator" android:src="@drawable/about_gallery_droids" />
        <com.google.android.apps.androidify.TextViewCompat android:textSize="@dimen/about_font_size" android:textColor="@color/about_grey_text" android:gravity="center" android:layout_gravity="center" android:layout_width="@dimen/about_button_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/about_internal_seperator" android:text="@string/about_character_gallery" />
        <com.google.android.apps.androidify.TextViewCompat android:textSize="@dimen/about_button_font_size" android:textColor="@android:color/white" android:gravity="center" android:layout_gravity="center" android:background="@drawable/btn_green_share" android:clickable="true" android:layout_width="@dimen/about_button_width" android:layout_height="@dimen/about_button_height" android:layout_marginTop="@dimen/about_internal_seperator" android:text="@string/about_view_character_gallery" android:lineSpacingMultiplier="0.6" android:onClick="clickedViewCharacterGallery" app:custom_font="and-black" />
        <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/about_section_seperator" android:src="@drawable/about_stuff" />
        <com.google.android.apps.androidify.TextViewCompat android:textSize="@dimen/about_font_size" android:textColor="@color/about_grey_text" android:gravity="center" android:layout_gravity="center" android:layout_width="@dimen/about_button_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/about_internal_seperator" android:text="@string/about_visit_android" />
        <com.google.android.apps.androidify.TextViewCompat android:textSize="@dimen/about_button_font_size" android:textColor="@android:color/white" android:gravity="center" android:layout_gravity="center" android:background="@drawable/btn_green_share" android:paddingTop="@dimen/about_button_top_padding" android:clickable="true" android:layout_width="@dimen/about_button_width" android:layout_height="@dimen/about_button_height" android:layout_marginTop="20.0dip" android:text="@string/about_visit_android_button" android:onClick="clickedVisitAndroid" app:custom_font="and-black" />
        <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/about_section_seperator" android:src="@drawable/about_suggestion" />
        <com.google.android.apps.androidify.TextViewCompat android:textSize="@dimen/about_font_size" android:textColor="@color/about_grey_text" android:gravity="center" android:layout_gravity="center" android:layout_width="@dimen/about_button_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/about_internal_seperator" android:text="@string/about_suggestion" />
        <com.google.android.apps.androidify.TextViewCompat android:textSize="@dimen/about_button_font_size" android:textColor="@android:color/white" android:gravity="center" android:layout_gravity="center" android:background="@drawable/btn_green_share" android:paddingTop="@dimen/about_button_top_padding" android:clickable="true" android:layout_width="@dimen/about_button_width" android:layout_height="@dimen/about_button_height" android:layout_marginTop="20.0dip" android:text="@string/about_suggestion_button" android:onClick="clickedSuggestion" app:custom_font="and-black" />
        <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/about_section_seperator" android:src="@drawable/about_caveman" />
        <com.google.android.apps.androidify.TextViewCompat android:textSize="@dimen/about_font_size" android:textColor="@color/about_grey_text" android:gravity="center" android:linksClickable="true" android:layout_gravity="center" android:id="@id/about_faq_text" android:clickable="true" android:layout_width="@dimen/about_button_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/about_internal_seperator" android:text="@string/about_visit_faq" />
        <com.google.android.apps.androidify.TextViewCompat android:textSize="@dimen/about_button_font_size" android:textColor="@android:color/white" android:gravity="center" android:layout_gravity="center" android:background="@drawable/btn_green_share" android:clickable="true" android:layout_width="@dimen/about_button_width" android:layout_height="@dimen/about_button_height" android:layout_marginTop="20.0dip" android:text="@string/about_visit_faq_button" android:lineSpacingMultiplier="0.6" android:onClick="clickedVisitFAQ" app:custom_font="and-black" />
        <View android:layout_width="fill_parent" android:layout_height="38.0dip" />
    </LinearLayout>
</ScrollView>