<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageButton android:background="@drawable/btn_menu_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_menuburger" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:onClick="clickedClose" android:contentDescription="Back" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerVertical="true">
        <com.google.android.apps.androidify.TextViewCompat android:gravity="center" android:id="@id/menu_new_android" android:background="@drawable/btn_menu_item" android:paddingTop="@dimen/menu_text_centering_adj" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/menu_height_text" android:text="@string/menu_create_new" style="@style/Text.MenuItem" />
        <View android:layout_gravity="center" android:background="@color/menu_divider" android:layout_width="@dimen/menu_separator_width" android:layout_height="0.6600001dip" />
        <com.google.android.apps.androidify.TextViewCompat android:gravity="center" android:id="@id/menu_myandroids" android:background="@drawable/btn_menu_item" android:paddingTop="@dimen/menu_text_centering_adj" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/menu_height_text" android:text="@string/menu_my_androids" android:lineSpacingMultiplier="0.7" style="@style/Text.MenuItem" />
        <View android:layout_gravity="center" android:background="@color/menu_divider" android:layout_width="@dimen/menu_separator_width" android:layout_height="0.6600001dip" />
        <com.google.android.apps.androidify.TextViewCompat android:gravity="center" android:id="@id/menu_share" android:background="@drawable/btn_menu_item" android:paddingTop="@dimen/menu_text_centering_adj" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/menu_height_text" android:text="@string/menu_share" style="@style/Text.MenuItem" />
        <View android:layout_gravity="center" android:background="@color/menu_divider" android:layout_width="@dimen/menu_separator_width" android:layout_height="0.6600001dip" />
        <com.google.android.apps.androidify.TextViewCompat android:gravity="center" android:id="@id/menu_make_famous" android:background="@drawable/btn_menu_item" android:paddingTop="@dimen/menu_text_centering_adj_doubleline" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/menu_height_text_large" android:text="@string/menu_make_famous" android:lineSpacingMultiplier="0.8" android:onClick="clickedShareToWebsite" style="@style/Text.MenuItem" />
        <View android:layout_gravity="center" android:background="@color/menu_divider" android:layout_width="@dimen/menu_separator_width" android:layout_height="0.6600001dip" />
        <com.google.android.apps.androidify.TextViewCompat android:gravity="center" android:id="@id/menu_about" android:background="@drawable/btn_menu_item" android:paddingTop="@dimen/menu_text_centering_adj" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/menu_height_text" android:text="@string/menu_about" style="@style/Text.MenuItem" />
    </LinearLayout>
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/menu_greendroid" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
</RelativeLayout>