<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/bg_grey" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageButton android:background="@drawable/btn_menu_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_back_button" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:onClick="clickedClose" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerVertical="true"
      xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
        <com.google.android.apps.androidify.AutoResizeTextView android:textSize="@dimen/sharetowebsite_topfont_size" android:textColor="@color/menu_green" android:gravity="center_horizontal" android:id="@id/tv_share_headline" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="@dimen/sharetoweb_top_margin" android:layout_marginRight="20.0dip" android:text="@string/share_headline" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:lineSpacingMultiplier="0.7" app:custom_font="and-black" />
        <android.support.v4.view.ViewPager android:id="@id/vp_sharepager" android:layout_width="fill_parent" android:layout_height="@dimen/sharetowebsite_pager_height" android:layout_below="@id/tv_share_headline">
            <LinearLayout android:orientation="vertical" android:id="@id/page3" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <FrameLayout android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/share_gallery" />
                    <com.google.android.apps.androidify.DrawView android:layout_gravity="center" android:id="@id/dv_page3_droid" android:layout_width="@dimen/sharetowebsite_droid2_size" android:layout_height="@dimen/sharetowebsite_droid2_size" />
                </FrameLayout>
                <com.google.android.apps.androidify.TextViewCompat android:textSize="@dimen/sharetowebsite_subheading_size" android:textColor="@color/share_subheading" android:gravity="center_horizontal" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sharetowebsite_subheading_topmargin" android:text="@string/share_gallery" app:custom_font="and-black" />
                <com.google.android.apps.androidify.AutoResizeTextView android:textSize="@dimen/sharetowebsite_smallfont_size" android:textColor="@color/share_subheading_subtext" android:gravity="center_horizontal" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/submit_to_website_subtext_margin" android:layout_marginTop="-10.0dip" android:layout_marginRight="@dimen/submit_to_website_subtext_margin" android:text="@string/share_gallery_subtext" android:maxLines="3" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/page1" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <FrameLayout android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/share_tv" />
                    <com.google.android.apps.androidify.DrawView android:layout_gravity="center" android:id="@id/dv_page1_droid" android:layout_width="@dimen/sharetoweb_droid1_size" android:layout_height="@dimen/sharetoweb_droid1_size" />
                </FrameLayout>
                <com.google.android.apps.androidify.TextViewCompat android:textSize="@dimen/sharetowebsite_subheading_size" android:textColor="@color/share_subheading" android:gravity="center_horizontal" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sharetowebsite_subheading_topmargin" android:text="@string/share_tv" app:custom_font="and-black" />
                <com.google.android.apps.androidify.AutoResizeTextView android:textSize="@dimen/sharetowebsite_smallfont_size" android:textColor="@color/share_subheading_subtext" android:gravity="center_horizontal" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/submit_to_website_subtext_margin" android:layout_marginTop="-10.0dip" android:layout_marginRight="@dimen/submit_to_website_subtext_margin" android:text="@string/share_tv_subtext" android:maxLines="3" />
            </LinearLayout>
        </android.support.v4.view.ViewPager>
        <LinearLayout android:orientation="horizontal" android:id="@id/pager_indicator" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sharetowebsite_indicator_topmargin" android:layout_below="@id/vp_sharepager" android:layout_centerHorizontal="true">
            <View android:background="@drawable/pager_indicator_selected" android:layout_width="@dimen/sharetowebsite_indicator_size" android:layout_height="@dimen/sharetowebsite_indicator_size" android:layout_marginRight="@dimen/sharetowebsite_indicator_spacing" />
            <View android:background="@drawable/pager_indicator_unselected" android:layout_width="@dimen/sharetowebsite_indicator_size" android:layout_height="@dimen/sharetowebsite_indicator_size" android:layout_marginRight="@dimen/sharetowebsite_indicator_spacing" />
        </LinearLayout>
        <com.google.android.apps.androidify.AutoResizeTextView android:textSize="@dimen/sharetowebsite_button_fontsize" android:textColor="@android:color/white" android:gravity="center" android:id="@id/tv_share_to_website" android:background="@drawable/btn_green_share" android:paddingLeft="10.0dip" android:paddingTop="@dimen/sharetowebsite_button_verticalcenter_padding" android:paddingRight="10.0dip" android:clickable="true" android:layout_width="@dimen/sharetowebsite_button_width" android:layout_height="@dimen/sharetowebsite_button_height" android:layout_marginTop="@dimen/sharetowebsite_button_margin_top" android:text="@string/submit_androidify" android:singleLine="true" android:layout_below="@id/pager_indicator" android:layout_centerHorizontal="true" android:onClick="clickedShare" app:custom_font="and-black" />
    </RelativeLayout>
</RelativeLayout>