<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/bg_grey" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageButton android:background="@drawable/btn_menu_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_close" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:onClick="clickedClose" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerVertical="true"
      xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
        <com.google.android.apps.androidify.TextViewCompat android:textSize="36.0dip" android:textColor="@color/menu_green" android:gravity="center_horizontal" android:id="@id/tv_share_headline" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:text="@string/submitform_headline" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" app:custom_font="and-black" />
        <com.google.android.apps.androidify.DrawView android:id="@id/dv_submitform_droid" android:layout_width="@dimen/submitform_droid_width" android:layout_height="@dimen/submitform_droid_height" android:layout_marginTop="0.0dip" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
        <View android:id="@id/bg_et1" android:background="@android:color/white" android:layout_width="@dimen/sharetowebsite_button_width" android:layout_height="@dimen/sharetowebsite_button_height" android:layout_marginTop="@dimen/submitform_edittext_bg_adjust" android:layout_below="@id/dv_submitform_droid" android:layout_centerHorizontal="true" />
        <EditText android:textSize="@dimen/sharetowebsite_button_fontsize" android:textColor="@color/dark_grey" android:textColorHint="@color/dark_grey_partialalpha" android:gravity="center" android:id="@id/et_droid_name" android:background="@android:color/transparent" android:layout_width="@dimen/sharetowebsite_button_width" android:layout_height="@dimen/sharetowebsite_button_height" android:layout_marginTop="@dimen/submitform_form_spacer" android:hint="@string/submitform_name" android:singleLine="true" android:maxLength="20" android:layout_alignTop="@id/bg_et1" android:layout_centerHorizontal="true" android:inputType="textNoSuggestions" android:textCursorDrawable="@drawable/android_name_cursor" />
        <View android:id="@id/bg_et2" android:background="@android:color/white" android:layout_width="@dimen/sharetowebsite_button_width" android:layout_height="@dimen/sharetowebsite_button_height" android:layout_marginTop="@dimen/submitform_form_spacer" android:layout_below="@id/bg_et1" android:layout_centerHorizontal="true" />
        <EditText android:textSize="@dimen/sharetowebsite_button_fontsize" android:textColor="@color/dark_grey" android:textColorHint="@color/dark_grey_partialalpha" android:gravity="center" android:id="@id/et_location" android:background="@android:color/transparent" android:layout_width="@dimen/sharetowebsite_button_width" android:layout_height="@dimen/sharetowebsite_button_height" android:layout_marginTop="@dimen/submitform_form_spacer" android:hint="@string/submitform_hometown" android:singleLine="true" android:maxLength="20" android:layout_alignTop="@id/bg_et2" android:layout_centerHorizontal="true" android:inputType="textNoSuggestions" android:textCursorDrawable="@drawable/android_name_cursor" />
        <com.google.android.apps.androidify.AutoResizeTextView android:textSize="@dimen/sharetowebsite_button_fontsize" android:textColor="@android:color/white" android:gravity="center" android:id="@id/tv_share_to_website" android:background="@drawable/btn_green_share" android:paddingLeft="10.0dip" android:paddingTop="@dimen/sharetowebsite_button_verticalcenter_padding" android:paddingRight="10.0dip" android:clickable="true" android:layout_width="@dimen/sharetowebsite_button_width" android:layout_height="@dimen/sharetowebsite_button_height" android:layout_marginTop="@dimen/submitform_spacer_larger" android:text="@string/submit_androidify" android:singleLine="true" android:layout_below="@id/bg_et2" android:layout_centerHorizontal="true" android:onClick="clickedSend" app:custom_font="and-black" />
    </RelativeLayout>
</RelativeLayout>