<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/bg_grey" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageButton android:background="@drawable/btn_menu_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_close" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:onClick="clickedClose" />
    <ImageView android:id="@id/img_resolve_main" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/share_droidjoinedparty" android:layout_centerInParent="true" />
    <View android:id="@id/dummy_center" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_centerInParent="true" />
    <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <com.google.android.apps.androidify.DrawView android:id="@id/dv_resolve_droid" android:layout_width="@dimen/resolve_droidsize" android:layout_height="@dimen/resolve_droidsize" android:layout_marginTop="@dimen/resolve_droid_topmargin" android:layout_marginRight="@dimen/resolve_droid_rightmargin" />
    </FrameLayout>
    <com.google.android.apps.androidify.TextViewCompat android:textSize="@dimen/resolve_smalltext_size" android:textColor="@color/dark_grey" android:gravity="center_horizontal" android:id="@id/tv_about_topbody" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="42.0dip" android:layout_marginTop="-15.0dip" android:layout_marginRight="42.0dip" android:layout_marginBottom="@dimen/resolve_text_img_spacer" android:text="@string/check_out_your_entrance" android:layout_above="@id/img_resolve_main" android:layout_centerHorizontal="true" />
    <com.google.android.apps.androidify.TextViewCompat android:textSize="@dimen/resolve_topheader_size" android:textColor="@color/menu_green" android:gravity="center_horizontal" android:id="@id/tv_share_headline" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="welcome to the party, steve!" android:layout_above="@id/tv_about_topbody" android:layout_centerHorizontal="true" app:custom_font="and-black" />
    <com.google.android.apps.androidify.TextViewCompat android:textSize="@dimen/sharetowebsite_button_fontsize" android:textColor="@android:color/white" android:gravity="center" android:id="@id/btn_visit_androidify" android:background="@drawable/btn_green_share" android:paddingTop="@dimen/sharetowebsite_button_verticalcenter_padding" android:clickable="true" android:layout_width="@dimen/sharetowebsite_button_width" android:layout_height="@dimen/sharetowebsite_button_height" android:layout_marginTop="@dimen/resolve_buttons_topmargin" android:text="@string/visit_androidify" android:layout_below="@id/img_resolve_main" android:layout_centerHorizontal="true" android:onClick="clickedVisitAndroidify" app:custom_font="and-black" />
    <com.google.android.apps.androidify.TextViewCompat android:textSize="@dimen/sharetowebsite_button_fontsize" android:textColor="@android:color/white" android:gravity="center" android:id="@id/btn_share_android" android:background="@drawable/btn_grey_share" android:paddingTop="@dimen/sharetowebsite_button_verticalcenter_padding" android:clickable="true" android:layout_width="@dimen/sharetowebsite_button_width" android:layout_height="@dimen/sharetowebsite_button_height" android:layout_marginTop="@dimen/resolve_button_spacer" android:text="@string/share_your_android" android:layout_below="@id/btn_visit_androidify" android:layout_centerHorizontal="true" android:onClick="clickedShare" app:custom_font="and-black" />
</RelativeLayout>